--- a/Charge_Transition_Levels/Regression.ipynb
+++ b/Charge_Transition_Levels/Regression.ipynb
@@ -1,7 +1,6 @@
 {
  "cells": [
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -84,6 +83,8 @@
    "source": [
     "##  Read Data  ##\n",
     "\n",
+    "!wget https://raw.githubusercontent.com/venkat-1/AI4Science/master/Material_Science/Charge_Transition_Levels/Data.csv\n",
+    "\n",
     "ifile  = open('Data.csv', \"rt\")\n",
     "#ifile  = open('Data_norm.csv', \"rt\")\n",
     "reader = csv.reader(ifile)\n",
@@ -105,6 +106,9 @@
     "\n",
     "\n",
     "    # Read CdX alloy data: CdTe_0.5Se_0.5 and CdSe_0.5S_0.5\n",
+    "\n",
+    "!wget https://raw.githubusercontent.com/venkat-1/AI4Science/master/Material_Science/Charge_Transition_Levels/Outside.csv\n",
+    "\n",
     "ifile2  = open('Outside.csv', \"rt\")\n",
     "#ifile2  = open('Outside_norm.csv', \"rt\")\n",
     "reader2 = csv.reader(ifile2)\n",
@@ -126,7 +130,10 @@
     "n_out = prop_out.size\n",
     "\n",
     "\n",
-    "    # Read Entire Dataset                                                                                                              \n",
+    "    # Read Entire Dataset\n",
+    "    \n",
+    "!wget https://raw.githubusercontent.com/venkat-1/AI4Science/master/Material_Science/Charge_Transition_Levels/X.csv\n",
+    "\n",
     "ifile3  = open('X.csv', \"rt\")\n",
     "#ifile3  = open('X_norm.csv', \"rt\")\n",
     "reader3 = csv.reader(ifile3)\n",
@@ -212,7 +219,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We will now start training the model. We will do this at three different levels of increasing sophistication. The first, and simplest, level ML1 is using the default parameters regression model (eg Random Forest). Next level, ML2, will dig into the model and optimize internal parameters of the model, hyperparameters, to obtain a better model. The last level, ML3, does hyperparameter optimization and cross-validation. The cross-validation is an important step to avoid or minimize overfitting of the model (think of this as fitting a high-order polynomial to a few data points). At the end, we will do a Grid Search, which is a scheme to march through a grid of hyperparameters, to find the best regression model within this set of hyperparameters.\n"
+    "We will now start training the model. We will do this at three different levels of increasing sophistication. The first, and simplest, level ML1 is using the default parameters regression model (eg Random Forest). Next level, ML2, will dig into the model and optimize inernal parameters of the model, hyperparameters, to obtain a better model. The last level, ML3, does hyperparameter optimization and cross-validation. The cross-validation is an important step to avoid or minimize overfitting of the model (think of this as fitting a high-order polynomial to a few data points). At the end, we will do a Grid Search, which is a scheme to march through a grid of hyperparameters, to find the best regression model within this set of hyperparameters.\n"
    ]
   },
   {
