--- a/Charge_Transition_Levels/Regression.ipynb
+++ b/Charge_Transition_Levels/Regression.ipynb
@@ -64,7 +64,7 @@
         "import pandas\n",
         "import matplotlib.pyplot as plt\n"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -99,7 +99,7 @@
         "from sklearn.gaussian_process import GaussianProcessRegressor\n",
         "from sklearn.gaussian_process.kernels import WhiteKernel, ExpSineSquared\n"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -203,7 +203,7 @@
         "n_all = dopant_all.size\n",
         "\n"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -310,7 +310,7 @@
         "        X_all_fl[i][j] = np.float(X_all[i][j])\n",
         "\n"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -353,10 +353,12 @@
         "Pred_train_fl = rfreg_opt.predict(X_train_fl)\n",
         "Pred_test_fl  = rfreg_opt.predict(X_test_fl)\n",
         "\n",
+        "print(rfreg_opt.best_params_)\n",
+        "\n",
         "np.savetxt('Pred_train.csv', Pred_train_fl)\n",
         "np.savetxt('Pred_test.csv', Pred_test_fl)\n"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -394,6 +396,8 @@
         "rfreg_opt.fit(X_train_fl, Prop_train_fl)\n",
         "Pred_train_fl = rfreg_opt.predict(X_train_fl)\n",
         "Pred_test_fl  = rfreg_opt.predict(X_test_fl)\n",
+        "\n",
+        "print(rfreg_opt.best_params_)\n",
         "\n",
         "np.savetxt('Pred_train.csv', Pred_train_fl)\n",
         "np.savetxt('Pred_test.csv', Pred_test_fl)\n"
@@ -437,10 +441,12 @@
         "Pred_train_fl = rfreg_opt.predict(X_train_fl)\n",
         "Pred_test_fl  = rfreg_opt.predict(X_test_fl)\n",
         "\n",
+        "print(rfreg_opt.best_params_)\n",
+        "\n",
         "np.savetxt('Pred_train.csv', Pred_train_fl)\n",
         "np.savetxt('Pred_test.csv', Pred_test_fl)\n"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -478,6 +484,8 @@
         "krr_opt.fit(X_train_fl, Prop_train_fl)\n",
         "Pred_train_fl = krr_opt.predict(X_train_fl)\n",
         "Pred_test_fl  = krr_opt.predict(X_test_fl)\n",
+        "\n",
+        "print(krr_opt.best_params_)\n",
         "\n",
         "np.savetxt('Pred_train.csv', Pred_train_fl)\n",
         "np.savetxt('Pred_test.csv', Pred_test_fl)\n"
@@ -519,6 +527,8 @@
         "Pred_train_fl = lassoreg.predict(X_train_fl)\n",
         "Pred_test_fl  = lassoreg.predict(X_test_fl)\n",
         "\n",
+        "print(lassoreg.best_params_)\n",
+        "\n",
         "np.savetxt('Pred_train.csv', Pred_train_fl)\n",
         "np.savetxt('Pred_test.csv', Pred_test_fl)\n"
       ],
@@ -545,10 +555,12 @@
       "source": [
         "###    Outside Prediction    ###\n",
         "\n",
+        "reg_opt = rfreg_opt\n",
+        "#reg_opt = krr_opt\n",
+        "#reg_opt = lassoreg\n",
         "\n",
-        "Pred_out = rfreg_opt.predict(X_out)\n",
-        "#Pred_out = krr_opt.predict(X_out)\n",
-        "#Pred_out = lassoreg.predict(X_out_fl)\n",
+        "\n",
+        "Pred_out = reg_opt.predict(X_out)\n",
         "Pred_out_fl = [0.0]*Pred_out.size\n",
         "Prop_out_fl = [0.0]*Pred_out.size\n",
         "for i in range(0,prop_out.size):\n",
@@ -560,9 +572,7 @@
         "\n",
         "\n",
         "\n",
-        "Pred_all = rfreg_opt.predict(X_all)\n",
-        "#Pred_all = krr_opt.predict(X_all)\n",
-        "#Pred_all = lassoreg.predict(X_all_fl)\n",
+        "Pred_all = reg_opt.predict(X_all)\n",
         "Pred_all_fl = [0.0]*Pred_all.size\n",
         "for i in range(0,Pred_all.size):\n",
         "    Pred_all_fl[i] = np.float(Pred_all[i])\n",
@@ -570,7 +580,7 @@
         "np.savetxt('Pred_all.csv', Pred_all_fl)\n",
         "\n"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -725,7 +735,7 @@
         "#np.savetxt('down_all.csv', down_all)\n",
         "\n"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -807,7 +817,7 @@
         "        Pred_test_CdS[ff] = Pred_test_fl[i]\n",
         "        ff = ff+1\n"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -961,7 +971,7 @@
         "    down_test_CdS[i] = Pred_test_CdS[i] - err_down_test_CdS[i]\n",
         "\n"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1016,7 +1026,7 @@
         "rmse_out = np.sqrt ( sklearn.metrics.mean_squared_error(Prop_out_fl[0:44], Pred_out_fl[0:44]) )\n",
         "\n"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1125,7 +1135,7 @@
         "plt.savefig('plot_Cd_rich.pdf', dpi=450)\n",
         "\n"
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
