--- a/Formation_Energies/Regression.ipynb
+++ b/Formation_Energies/Regression.ipynb
@@ -267,7 +267,23 @@
       "source": [
         "##   Visualize Data   ##\n",
         "\n",
-        "plt.scatter(X[:,17], prop)\n"
+        "plt.figure(figsize=(6,6))\n",
+        "plt.subplots_adjust(left=0.16, bottom=0.16, right=0.95, top=0.90)\n",
+        "plt.rc('font', family='Arial narrow')\n",
+        "\n",
+        "#a = [-175,0,125]\n",
+        "#b = [-175,0,125]\n",
+        "#plt.plot(b, a, c='k', ls='-')\n",
+        "\n",
+        "plt.ylabel('Property', fontname='Arial Narrow', size=32)\n",
+        "plt.xlabel('Descriptor', fontname='Arial Narrow', size=32)\n",
+        "plt.rc('xtick', labelsize=28)\n",
+        "plt.rc('ytick', labelsize=28)\n",
+        "#plt.ylim([-1.0, 9.3])\n",
+        "#plt.xlim([-1.0, 9.3])\n",
+        "\n",
+        "plt.scatter(X[:,17], prop[:], c='k', marker='*', s=200, edgecolors='dimgrey', alpha=1.0)\n",
+        "\n"
       ],
       "execution_count": 43,
       "outputs": [
@@ -508,7 +524,47 @@
         "print(rfreg_opt.best_params_)\n",
         "\n",
         "np.savetxt('Pred_train.csv', Pred_train_fl)\n",
-        "np.savetxt('Pred_test.csv', Pred_test_fl)\n"
+        "np.savetxt('Pred_test.csv', Pred_test_fl)\n",
+        "\n",
+        "\n",
+        "##  Prediction RMSE  ##\n",
+        "\n",
+        "rmse_test_prop = np.sqrt ( sklearn.metrics.mean_squared_error(Prop_test_fl, Pred_test_fl) )\n",
+        "rmse_train_prop = np.sqrt ( sklearn.metrics.mean_squared_error(Prop_train_fl, Pred_train_fl) )\n",
+        "\n",
+        "\n",
+        "##  Plot Regression Results  ##\n",
+        "\n",
+        "plt.figure(figsize=(6,6))\n",
+        "plt.subplots_adjust(left=0.16, bottom=0.16, right=0.95, top=0.90)\n",
+        "plt.rc('font', family='Arial narrow')\n",
+        "\n",
+        "a = [-175,0,125]\n",
+        "b = [-175,0,125]\n",
+        "plt.plot(b, a, c='k', ls='-')\n",
+        "\n",
+        "plt.ylabel('ML Prediction', fontname='Arial Narrow', size=32)\n",
+        "plt.xlabel('DFT Calculation', fontname='Arial Narrow', size=32)\n",
+        "plt.rc('xtick', labelsize=28)\n",
+        "plt.rc('ytick', labelsize=28)\n",
+        "plt.ylim([-1.0, 9.3])\n",
+        "plt.xlim([-1.0, 9.3])\n",
+        "plt.xticks([0, 2, 4, 6, 8])\n",
+        "plt.yticks([0, 2, 4, 6, 8])\n",
+        "\n",
+        "plt.scatter(Prop_train_fl[:], Pred_train_fl[:], c='blue', marker='*', s=200, edgecolors='dimgrey', alpha=1.0, label='Training')\n",
+        "plt.scatter(Prop_test_fl[:], Pred_test_fl[:], c='orange', marker='*', s=200, edgecolors='dimgrey', alpha=0.2, label='Test')\n",
+        "plt.legend(loc='upper left',ncol=1, frameon=True, prop={'family':'Arial narrow','size':16})\n",
+        "\n",
+        "te = '%.2f' % rmse_test_prop\n",
+        "tr = '%.2f' % rmse_train_prop\n",
+        "plt.text(4.3, 0.8, 'Test_rmse = ', c='r', fontsize=16)\n",
+        "plt.text(7.4, 0.8, te, c='r', fontsize=16)\n",
+        "plt.text(8.5, 0.8, 'eV', c='r', fontsize=16)\n",
+        "plt.text(4.2, 0.1, 'Train_rmse = ', c='r', fontsize=16)\n",
+        "plt.text(7.4, 0.1, tr, c='r', fontsize=16)\n",
+        "plt.text(8.5, 0.1, 'eV', c='r', fontsize=16)\n",
+        "\n"
       ],
       "execution_count": null,
       "outputs": [
@@ -560,7 +616,47 @@
         "print(rfreg_opt.best_params_)\n",
         "\n",
         "np.savetxt('Pred_train.csv', Pred_train_fl)\n",
-        "np.savetxt('Pred_test.csv', Pred_test_fl)\n"
+        "np.savetxt('Pred_test.csv', Pred_test_fl)\n",
+        "\n",
+        "\n",
+        "##  Prediction RMSE  ##\n",
+        "\n",
+        "rmse_test_prop = np.sqrt ( sklearn.metrics.mean_squared_error(Prop_test_fl, Pred_test_fl) )\n",
+        "rmse_train_prop = np.sqrt ( sklearn.metrics.mean_squared_error(Prop_train_fl, Pred_train_fl) )\n",
+        "\n",
+        "\n",
+        "##  Plot Regression Results  ##\n",
+        "\n",
+        "plt.figure(figsize=(6,6))\n",
+        "plt.subplots_adjust(left=0.16, bottom=0.16, right=0.95, top=0.90)\n",
+        "plt.rc('font', family='Arial narrow')\n",
+        "\n",
+        "a = [-175,0,125]\n",
+        "b = [-175,0,125]\n",
+        "plt.plot(b, a, c='k', ls='-')\n",
+        "\n",
+        "plt.ylabel('ML Prediction', fontname='Arial Narrow', size=32)\n",
+        "plt.xlabel('DFT Calculation', fontname='Arial Narrow', size=32)\n",
+        "plt.rc('xtick', labelsize=28)\n",
+        "plt.rc('ytick', labelsize=28)\n",
+        "plt.ylim([-1.0, 9.3])\n",
+        "plt.xlim([-1.0, 9.3])\n",
+        "plt.xticks([0, 2, 4, 6, 8])\n",
+        "plt.yticks([0, 2, 4, 6, 8])\n",
+        "\n",
+        "plt.scatter(Prop_train_fl[:], Pred_train_fl[:], c='blue', marker='*', s=200, edgecolors='dimgrey', alpha=1.0, label='Training')\n",
+        "plt.scatter(Prop_test_fl[:], Pred_test_fl[:], c='orange', marker='*', s=200, edgecolors='dimgrey', alpha=0.2, label='Test')\n",
+        "plt.legend(loc='upper left',ncol=1, frameon=True, prop={'family':'Arial narrow','size':16})\n",
+        "\n",
+        "te = '%.2f' % rmse_test_prop\n",
+        "tr = '%.2f' % rmse_train_prop\n",
+        "plt.text(4.3, 0.8, 'Test_rmse = ', c='r', fontsize=16)\n",
+        "plt.text(7.4, 0.8, te, c='r', fontsize=16)\n",
+        "plt.text(8.5, 0.8, 'eV', c='r', fontsize=16)\n",
+        "plt.text(4.2, 0.1, 'Train_rmse = ', c='r', fontsize=16)\n",
+        "plt.text(7.4, 0.1, tr, c='r', fontsize=16)\n",
+        "plt.text(8.5, 0.1, 'eV', c='r', fontsize=16)\n",
+        "\n"
       ],
       "execution_count": null,
       "outputs": []
@@ -604,7 +700,47 @@
         "print(krr_opt.best_params_)\n",
         "\n",
         "np.savetxt('Pred_train.csv', Pred_train_fl)\n",
-        "np.savetxt('Pred_test.csv', Pred_test_fl)\n"
+        "np.savetxt('Pred_test.csv', Pred_test_fl)\n",
+        "\n",
+        "\n",
+        "##  Prediction RMSE  ##\n",
+        "\n",
+        "rmse_test_prop = np.sqrt ( sklearn.metrics.mean_squared_error(Prop_test_fl, Pred_test_fl) )\n",
+        "rmse_train_prop = np.sqrt ( sklearn.metrics.mean_squared_error(Prop_train_fl, Pred_train_fl) )\n",
+        "\n",
+        "\n",
+        "##  Plot Regression Results  ##\n",
+        "\n",
+        "plt.figure(figsize=(6,6))\n",
+        "plt.subplots_adjust(left=0.16, bottom=0.16, right=0.95, top=0.90)\n",
+        "plt.rc('font', family='Arial narrow')\n",
+        "\n",
+        "a = [-175,0,125]\n",
+        "b = [-175,0,125]\n",
+        "plt.plot(b, a, c='k', ls='-')\n",
+        "\n",
+        "plt.ylabel('ML Prediction', fontname='Arial Narrow', size=32)\n",
+        "plt.xlabel('DFT Calculation', fontname='Arial Narrow', size=32)\n",
+        "plt.rc('xtick', labelsize=28)\n",
+        "plt.rc('ytick', labelsize=28)\n",
+        "plt.ylim([-1.0, 9.3])\n",
+        "plt.xlim([-1.0, 9.3])\n",
+        "plt.xticks([0, 2, 4, 6, 8])\n",
+        "plt.yticks([0, 2, 4, 6, 8])\n",
+        "\n",
+        "plt.scatter(Prop_train_fl[:], Pred_train_fl[:], c='blue', marker='*', s=200, edgecolors='dimgrey', alpha=1.0, label='Training')\n",
+        "plt.scatter(Prop_test_fl[:], Pred_test_fl[:], c='orange', marker='*', s=200, edgecolors='dimgrey', alpha=0.2, label='Test')\n",
+        "plt.legend(loc='upper left',ncol=1, frameon=True, prop={'family':'Arial narrow','size':16})\n",
+        "\n",
+        "te = '%.2f' % rmse_test_prop\n",
+        "tr = '%.2f' % rmse_train_prop\n",
+        "plt.text(4.3, 0.8, 'Test_rmse = ', c='r', fontsize=16)\n",
+        "plt.text(7.4, 0.8, te, c='r', fontsize=16)\n",
+        "plt.text(8.5, 0.8, 'eV', c='r', fontsize=16)\n",
+        "plt.text(4.2, 0.1, 'Train_rmse = ', c='r', fontsize=16)\n",
+        "plt.text(7.4, 0.1, tr, c='r', fontsize=16)\n",
+        "plt.text(8.5, 0.1, 'eV', c='r', fontsize=16)\n",
+        "\n"
       ],
       "execution_count": null,
       "outputs": []
@@ -650,7 +786,47 @@
         "print(lassoreg.best_params_)\n",
         "\n",
         "np.savetxt('Pred_train.csv', Pred_train_fl)\n",
-        "np.savetxt('Pred_test.csv', Pred_test_fl)\n"
+        "np.savetxt('Pred_test.csv', Pred_test_fl)\n",
+        "\n",
+        "\n",
+        "##  Prediction RMSE  ##\n",
+        "\n",
+        "rmse_test_prop = np.sqrt ( sklearn.metrics.mean_squared_error(Prop_test_fl, Pred_test_fl) )\n",
+        "rmse_train_prop = np.sqrt ( sklearn.metrics.mean_squared_error(Prop_train_fl, Pred_train_fl) )\n",
+        "\n",
+        "\n",
+        "##  Plot Regression Results  ##\n",
+        "\n",
+        "plt.figure(figsize=(6,6))\n",
+        "plt.subplots_adjust(left=0.16, bottom=0.16, right=0.95, top=0.90)\n",
+        "plt.rc('font', family='Arial narrow')\n",
+        "\n",
+        "a = [-175,0,125]\n",
+        "b = [-175,0,125]\n",
+        "plt.plot(b, a, c='k', ls='-')\n",
+        "\n",
+        "plt.ylabel('ML Prediction', fontname='Arial Narrow', size=32)\n",
+        "plt.xlabel('DFT Calculation', fontname='Arial Narrow', size=32)\n",
+        "plt.rc('xtick', labelsize=28)\n",
+        "plt.rc('ytick', labelsize=28)\n",
+        "plt.ylim([-1.0, 9.3])\n",
+        "plt.xlim([-1.0, 9.3])\n",
+        "plt.xticks([0, 2, 4, 6, 8])\n",
+        "plt.yticks([0, 2, 4, 6, 8])\n",
+        "\n",
+        "plt.scatter(Prop_train_fl[:], Pred_train_fl[:], c='blue', marker='*', s=200, edgecolors='dimgrey', alpha=1.0, label='Training')\n",
+        "plt.scatter(Prop_test_fl[:], Pred_test_fl[:], c='orange', marker='*', s=200, edgecolors='dimgrey', alpha=0.2, label='Test')\n",
+        "plt.legend(loc='upper left',ncol=1, frameon=True, prop={'family':'Arial narrow','size':16})\n",
+        "\n",
+        "te = '%.2f' % rmse_test_prop\n",
+        "tr = '%.2f' % rmse_train_prop\n",
+        "plt.text(4.3, 0.8, 'Test_rmse = ', c='r', fontsize=16)\n",
+        "plt.text(7.4, 0.8, te, c='r', fontsize=16)\n",
+        "plt.text(8.5, 0.8, 'eV', c='r', fontsize=16)\n",
+        "plt.text(4.2, 0.1, 'Train_rmse = ', c='r', fontsize=16)\n",
+        "plt.text(7.4, 0.1, tr, c='r', fontsize=16)\n",
+        "plt.text(8.5, 0.1, 'eV', c='r', fontsize=16)\n",
+        "\n"
       ],
       "execution_count": null,
       "outputs": [
