--- a/Charge_Transition_Levels/Regression.ipynb
+++ b/Charge_Transition_Levels/Regression.ipynb
@@ -148,9 +148,9 @@
         "CdX = csvdata[:,1]\n",
         "doping_site = csvdata[:,2]\n",
         "prop  = csvdata[:,3]  ## eps_q1_q2\n",
-        "#X = csvdata[:,4:20]\n",
-        "#X = csvdata[:,20:]\n",
-        "X = csvdata[:,4:]\n",
+        "#X = csvdata[:,4:20]      ##  Elemental Properties\n",
+        "#X = csvdata[:,20:]       ##  Unit Cell Defect Properties\n",
+        "X = csvdata[:,4:]         ##  Elemental + Unit Cell Defect Properties\n",
         "\n",
         "\n",
         "\n",
@@ -249,6 +249,47 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "VaRxTffpHsGa",
+        "colab_type": "text"
+      },
+      "source": [
+        "Visualize data: plot desired descriptor dimension vs property."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "xPxxRaCdHVVS",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "##   Visualize Data   ##\n",
+        "\n",
+        "plt.figure(figsize=(6,6))\n",
+        "plt.subplots_adjust(left=0.16, bottom=0.16, right=0.95, top=0.90)\n",
+        "plt.rc('font', family='Arial narrow')\n",
+        "\n",
+        "plt.ylabel('Property', fontname='Arial Narrow', size=32)\n",
+        "plt.xlabel('Descriptor', fontname='Arial Narrow', size=32)\n",
+        "plt.rc('xtick', labelsize=32)\n",
+        "plt.rc('ytick', labelsize=32)\n",
+        "\n",
+        "yy = [0.0]*n\n",
+        "xx = [0.0]*n\n",
+        "\n",
+        "for i in range(0,n):\n",
+        "    yy[i] = np.float(prop[i])\n",
+        "    xx[i] = np.float(X[i,2])\n",
+        "\n",
+        "plt.scatter(xx[:], yy[:], c='k', marker='*', s=200, edgecolors='dimgrey', alpha=1.0)\n"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "85syWoca-GE8",
         "colab_type": "text"
       },
@@ -309,6 +350,84 @@
         "    for j in range(0,m):\n",
         "        X_all_fl[i][j] = np.float(X_all[i][j])\n",
         "\n"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "mpYthf5mHmxB",
+        "colab_type": "text"
+      },
+      "source": [
+        "We will now start training a regression model to predict the property of interest, impurity formation energy. Simple linear regression (ordinary least squares) will be used at first before attempting nonlinear regression techniques."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "7pW06NvkHiKq",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        " ###   Linear Regression   ###\n",
+        "\n",
+        "param_grid = { }\n",
+        "    \n",
+        "ols = GridSearchCV(LinearRegression(), param_grid=param_grid)\n",
+        "\n",
+        "ols.fit(X_train_fl, Prop_train_fl)\n",
+        "Pred_train_fl = ols.predict(X_train_fl)\n",
+        "Pred_test_fl  = ols.predict(X_test_fl)\n",
+        "\n",
+        "print(ols.best_params_)\n",
+        "\n",
+        "np.savetxt('Pred_train.csv', Pred_train_fl)\n",
+        "np.savetxt('Pred_test.csv', Pred_test_fl)\n",
+        "\n",
+        "\n",
+        "##  Prediction RMSE  ##\n",
+        "\n",
+        "rmse_test_prop = np.sqrt ( sklearn.metrics.mean_squared_error(Prop_test_fl, Pred_test_fl) )\n",
+        "rmse_train_prop = np.sqrt ( sklearn.metrics.mean_squared_error(Prop_train_fl, Pred_train_fl) )\n",
+        "\n",
+        "\n",
+        "##  Plot Regression Results  ##\n",
+        "\n",
+        "plt.figure(figsize=(6,6))\n",
+        "plt.subplots_adjust(left=0.16, bottom=0.16, right=0.95, top=0.90)\n",
+        "plt.rc('font', family='Arial narrow')\n",
+        "\n",
+        "plt.title('Linear Regression Model, Charge Transition Levels (eV)', fontsize=20, pad=12)\n",
+        "\n",
+        "a = [-175,0,125]\n",
+        "b = [-175,0,125]\n",
+        "plt.plot(b, a, c='k', ls='-')\n",
+        "\n",
+        "plt.ylabel('ML Prediction', fontname='Arial Narrow', size=32)\n",
+        "plt.xlabel('DFT Calculation', fontname='Arial Narrow', size=32)\n",
+        "plt.rc('xtick', labelsize=28)\n",
+        "plt.rc('ytick', labelsize=28)\n",
+        "plt.ylim([-1.5, 4.2])\n",
+        "plt.xlim([-1.5, 4.2])\n",
+        "\n",
+        "plt.scatter(Prop_train_fl[:], Pred_train_fl[:], c='blue', marker='*', s=200, edgecolors='dimgrey', alpha=1.0, label='Training')\n",
+        "plt.scatter(Prop_test_fl[:], Pred_test_fl[:], c='orange', marker='*', s=200, edgecolors='dimgrey', alpha=0.2, label='Test')\n",
+        "\n",
+        "te = '%.2f' % rmse_test_prop\n",
+        "tr = '%.2f' % rmse_train_prop\n",
+        "plt.text(2.0, -0.6, 'Test_rmse = ', c='r', fontsize=12)\n",
+        "plt.text(3.3, -0.6, te, c='r', fontsize=12)\n",
+        "plt.text(3.8, -0.6, 'eV', c='r', fontsize=12)\n",
+        "plt.text(1.9, -1.0, 'Train_rmse = ', c='r', fontsize=12)\n",
+        "plt.text(3.3, -1.0, tr, c='r', fontsize=12)\n",
+        "plt.text(3.8, -1.0, 'eV', c='r', fontsize=12)\n",
+        "\n",
+        "plt.xticks([-1, 0, 1, 2, 3, 4])\n",
+        "plt.yticks([-1, 0, 1, 2, 3, 4])\n",
+        "plt.legend(loc='upper left',ncol=1, frameon=True, prop={'family':'Arial narrow','size':16})\n"
       ],
       "execution_count": null,
       "outputs": []
