--- a/Charge_Transition_Levels/Regression.ipynb
+++ b/Charge_Transition_Levels/Regression.ipynb
@@ -475,7 +475,49 @@
         "print(rfreg_opt.best_params_)\n",
         "\n",
         "np.savetxt('Pred_train.csv', Pred_train_fl)\n",
-        "np.savetxt('Pred_test.csv', Pred_test_fl)\n"
+        "np.savetxt('Pred_test.csv', Pred_test_fl)\n",
+        "\n",
+        "\n",
+        "##  Prediction RMSE  ##\n",
+        "\n",
+        "rmse_test_prop = np.sqrt ( sklearn.metrics.mean_squared_error(Prop_test_fl, Pred_test_fl) )\n",
+        "rmse_train_prop = np.sqrt ( sklearn.metrics.mean_squared_error(Prop_train_fl, Pred_train_fl) )\n",
+        "\n",
+        "\n",
+        "##  Plot Regression Results  ##\n",
+        "\n",
+        "plt.figure(figsize=(6,6))\n",
+        "plt.subplots_adjust(left=0.16, bottom=0.16, right=0.95, top=0.90)\n",
+        "plt.rc('font', family='Arial narrow')\n",
+        "\n",
+        "plt.title('Random Forest Regression Model, Charge Transition Levels (eV)', fontsize=20, pad=12)\n",
+        "\n",
+        "a = [-175,0,125]\n",
+        "b = [-175,0,125]\n",
+        "plt.plot(b, a, c='k', ls='-')\n",
+        "\n",
+        "plt.ylabel('ML Prediction', fontname='Arial Narrow', size=32)\n",
+        "plt.xlabel('DFT Calculation', fontname='Arial Narrow', size=32)\n",
+        "plt.rc('xtick', labelsize=28)\n",
+        "plt.rc('ytick', labelsize=28)\n",
+        "plt.ylim([-1.5, 4.2])\n",
+        "plt.xlim([-1.5, 4.2])\n",
+        "\n",
+        "plt.scatter(Prop_train_fl[:], Pred_train_fl[:], c='blue', marker='*', s=200, edgecolors='dimgrey', alpha=1.0, label='Training')\n",
+        "plt.scatter(Prop_test_fl[:], Pred_test_fl[:], c='orange', marker='*', s=200, edgecolors='dimgrey', alpha=0.2, label='Test')\n",
+        "\n",
+        "te = '%.2f' % rmse_test_prop\n",
+        "tr = '%.2f' % rmse_train_prop\n",
+        "plt.text(2.0, -0.6, 'Test_rmse = ', c='r', fontsize=12)\n",
+        "plt.text(3.3, -0.6, te, c='r', fontsize=12)\n",
+        "plt.text(3.8, -0.6, 'eV', c='r', fontsize=12)\n",
+        "plt.text(1.9, -1.0, 'Train_rmse = ', c='r', fontsize=12)\n",
+        "plt.text(3.3, -1.0, tr, c='r', fontsize=12)\n",
+        "plt.text(3.8, -1.0, 'eV', c='r', fontsize=12)\n",
+        "\n",
+        "plt.xticks([-1, 0, 1, 2, 3, 4])\n",
+        "plt.yticks([-1, 0, 1, 2, 3, 4])\n",
+        "plt.legend(loc='upper left',ncol=1, frameon=True, prop={'family':'Arial narrow','size':16})\n"
       ],
       "execution_count": null,
       "outputs": []
@@ -519,7 +561,49 @@
         "print(rfreg_opt.best_params_)\n",
         "\n",
         "np.savetxt('Pred_train.csv', Pred_train_fl)\n",
-        "np.savetxt('Pred_test.csv', Pred_test_fl)\n"
+        "np.savetxt('Pred_test.csv', Pred_test_fl)\n",
+        "\n",
+        "\n",
+        "##  Prediction RMSE  ##\n",
+        "\n",
+        "rmse_test_prop = np.sqrt ( sklearn.metrics.mean_squared_error(Prop_test_fl, Pred_test_fl) )\n",
+        "rmse_train_prop = np.sqrt ( sklearn.metrics.mean_squared_error(Prop_train_fl, Pred_train_fl) )\n",
+        "\n",
+        "\n",
+        "##  Plot Regression Results  ##\n",
+        "\n",
+        "plt.figure(figsize=(6,6))\n",
+        "plt.subplots_adjust(left=0.16, bottom=0.16, right=0.95, top=0.90)\n",
+        "plt.rc('font', family='Arial narrow')\n",
+        "\n",
+        "plt.title('Random Forest Regression Model, Charge Transition Levels (eV)', fontsize=20, pad=12)\n",
+        "\n",
+        "a = [-175,0,125]\n",
+        "b = [-175,0,125]\n",
+        "plt.plot(b, a, c='k', ls='-')\n",
+        "\n",
+        "plt.ylabel('ML Prediction', fontname='Arial Narrow', size=32)\n",
+        "plt.xlabel('DFT Calculation', fontname='Arial Narrow', size=32)\n",
+        "plt.rc('xtick', labelsize=28)\n",
+        "plt.rc('ytick', labelsize=28)\n",
+        "plt.ylim([-1.5, 4.2])\n",
+        "plt.xlim([-1.5, 4.2])\n",
+        "\n",
+        "plt.scatter(Prop_train_fl[:], Pred_train_fl[:], c='blue', marker='*', s=200, edgecolors='dimgrey', alpha=1.0, label='Training')\n",
+        "plt.scatter(Prop_test_fl[:], Pred_test_fl[:], c='orange', marker='*', s=200, edgecolors='dimgrey', alpha=0.2, label='Test')\n",
+        "\n",
+        "te = '%.2f' % rmse_test_prop\n",
+        "tr = '%.2f' % rmse_train_prop\n",
+        "plt.text(2.0, -0.6, 'Test_rmse = ', c='r', fontsize=12)\n",
+        "plt.text(3.3, -0.6, te, c='r', fontsize=12)\n",
+        "plt.text(3.8, -0.6, 'eV', c='r', fontsize=12)\n",
+        "plt.text(1.9, -1.0, 'Train_rmse = ', c='r', fontsize=12)\n",
+        "plt.text(3.3, -1.0, tr, c='r', fontsize=12)\n",
+        "plt.text(3.8, -1.0, 'eV', c='r', fontsize=12)\n",
+        "\n",
+        "plt.xticks([-1, 0, 1, 2, 3, 4])\n",
+        "plt.yticks([-1, 0, 1, 2, 3, 4])\n",
+        "plt.legend(loc='upper left',ncol=1, frameon=True, prop={'family':'Arial narrow','size':16})\n"
       ],
       "execution_count": null,
       "outputs": []
@@ -563,7 +647,49 @@
         "print(rfreg_opt.best_params_)\n",
         "\n",
         "np.savetxt('Pred_train.csv', Pred_train_fl)\n",
-        "np.savetxt('Pred_test.csv', Pred_test_fl)\n"
+        "np.savetxt('Pred_test.csv', Pred_test_fl)\n",
+        "\n",
+        "\n",
+        "##  Prediction RMSE  ##\n",
+        "\n",
+        "rmse_test_prop = np.sqrt ( sklearn.metrics.mean_squared_error(Prop_test_fl, Pred_test_fl) )\n",
+        "rmse_train_prop = np.sqrt ( sklearn.metrics.mean_squared_error(Prop_train_fl, Pred_train_fl) )\n",
+        "\n",
+        "\n",
+        "##  Plot Regression Results  ##\n",
+        "\n",
+        "plt.figure(figsize=(6,6))\n",
+        "plt.subplots_adjust(left=0.16, bottom=0.16, right=0.95, top=0.90)\n",
+        "plt.rc('font', family='Arial narrow')\n",
+        "\n",
+        "plt.title('Random Forest Regression Model, Charge Transition Levels (eV)', fontsize=20, pad=12)\n",
+        "\n",
+        "a = [-175,0,125]\n",
+        "b = [-175,0,125]\n",
+        "plt.plot(b, a, c='k', ls='-')\n",
+        "\n",
+        "plt.ylabel('ML Prediction', fontname='Arial Narrow', size=32)\n",
+        "plt.xlabel('DFT Calculation', fontname='Arial Narrow', size=32)\n",
+        "plt.rc('xtick', labelsize=28)\n",
+        "plt.rc('ytick', labelsize=28)\n",
+        "plt.ylim([-1.5, 4.2])\n",
+        "plt.xlim([-1.5, 4.2])\n",
+        "\n",
+        "plt.scatter(Prop_train_fl[:], Pred_train_fl[:], c='blue', marker='*', s=200, edgecolors='dimgrey', alpha=1.0, label='Training')\n",
+        "plt.scatter(Prop_test_fl[:], Pred_test_fl[:], c='orange', marker='*', s=200, edgecolors='dimgrey', alpha=0.2, label='Test')\n",
+        "\n",
+        "te = '%.2f' % rmse_test_prop\n",
+        "tr = '%.2f' % rmse_train_prop\n",
+        "plt.text(2.0, -0.6, 'Test_rmse = ', c='r', fontsize=12)\n",
+        "plt.text(3.3, -0.6, te, c='r', fontsize=12)\n",
+        "plt.text(3.8, -0.6, 'eV', c='r', fontsize=12)\n",
+        "plt.text(1.9, -1.0, 'Train_rmse = ', c='r', fontsize=12)\n",
+        "plt.text(3.3, -1.0, tr, c='r', fontsize=12)\n",
+        "plt.text(3.8, -1.0, 'eV', c='r', fontsize=12)\n",
+        "\n",
+        "plt.xticks([-1, 0, 1, 2, 3, 4])\n",
+        "plt.yticks([-1, 0, 1, 2, 3, 4])\n",
+        "plt.legend(loc='upper left',ncol=1, frameon=True, prop={'family':'Arial narrow','size':16})\n"
       ],
       "execution_count": null,
       "outputs": []
@@ -607,7 +733,49 @@
         "print(krr_opt.best_params_)\n",
         "\n",
         "np.savetxt('Pred_train.csv', Pred_train_fl)\n",
-        "np.savetxt('Pred_test.csv', Pred_test_fl)\n"
+        "np.savetxt('Pred_test.csv', Pred_test_fl)\n",
+        "\n",
+        "\n",
+        "##  Prediction RMSE  ##\n",
+        "\n",
+        "rmse_test_prop = np.sqrt ( sklearn.metrics.mean_squared_error(Prop_test_fl, Pred_test_fl) )\n",
+        "rmse_train_prop = np.sqrt ( sklearn.metrics.mean_squared_error(Prop_train_fl, Pred_train_fl) )\n",
+        "\n",
+        "\n",
+        "##  Plot Regression Results  ##\n",
+        "\n",
+        "plt.figure(figsize=(6,6))\n",
+        "plt.subplots_adjust(left=0.16, bottom=0.16, right=0.95, top=0.90)\n",
+        "plt.rc('font', family='Arial narrow')\n",
+        "\n",
+        "plt.title('Kernel Ridge Regression Model, Charge Transition Levels (eV)', fontsize=20, pad=12)\n",
+        "\n",
+        "a = [-175,0,125]\n",
+        "b = [-175,0,125]\n",
+        "plt.plot(b, a, c='k', ls='-')\n",
+        "\n",
+        "plt.ylabel('ML Prediction', fontname='Arial Narrow', size=32)\n",
+        "plt.xlabel('DFT Calculation', fontname='Arial Narrow', size=32)\n",
+        "plt.rc('xtick', labelsize=28)\n",
+        "plt.rc('ytick', labelsize=28)\n",
+        "plt.ylim([-1.5, 4.2])\n",
+        "plt.xlim([-1.5, 4.2])\n",
+        "\n",
+        "plt.scatter(Prop_train_fl[:], Pred_train_fl[:], c='blue', marker='*', s=200, edgecolors='dimgrey', alpha=1.0, label='Training')\n",
+        "plt.scatter(Prop_test_fl[:], Pred_test_fl[:], c='orange', marker='*', s=200, edgecolors='dimgrey', alpha=0.2, label='Test')\n",
+        "\n",
+        "te = '%.2f' % rmse_test_prop\n",
+        "tr = '%.2f' % rmse_train_prop\n",
+        "plt.text(2.0, -0.6, 'Test_rmse = ', c='r', fontsize=12)\n",
+        "plt.text(3.3, -0.6, te, c='r', fontsize=12)\n",
+        "plt.text(3.8, -0.6, 'eV', c='r', fontsize=12)\n",
+        "plt.text(1.9, -1.0, 'Train_rmse = ', c='r', fontsize=12)\n",
+        "plt.text(3.3, -1.0, tr, c='r', fontsize=12)\n",
+        "plt.text(3.8, -1.0, 'eV', c='r', fontsize=12)\n",
+        "\n",
+        "plt.xticks([-1, 0, 1, 2, 3, 4])\n",
+        "plt.yticks([-1, 0, 1, 2, 3, 4])\n",
+        "plt.legend(loc='upper left',ncol=1, frameon=True, prop={'family':'Arial narrow','size':16})\n"
       ],
       "execution_count": null,
       "outputs": []
@@ -649,7 +817,49 @@
         "print(lassoreg.best_params_)\n",
         "\n",
         "np.savetxt('Pred_train.csv', Pred_train_fl)\n",
-        "np.savetxt('Pred_test.csv', Pred_test_fl)\n"
+        "np.savetxt('Pred_test.csv', Pred_test_fl)\n",
+        "\n",
+        "\n",
+        "##  Prediction RMSE  ##\n",
+        "\n",
+        "rmse_test_prop = np.sqrt ( sklearn.metrics.mean_squared_error(Prop_test_fl, Pred_test_fl) )\n",
+        "rmse_train_prop = np.sqrt ( sklearn.metrics.mean_squared_error(Prop_train_fl, Pred_train_fl) )\n",
+        "\n",
+        "\n",
+        "##  Plot Regression Results  ##\n",
+        "\n",
+        "plt.figure(figsize=(6,6))\n",
+        "plt.subplots_adjust(left=0.16, bottom=0.16, right=0.95, top=0.90)\n",
+        "plt.rc('font', family='Arial narrow')\n",
+        "\n",
+        "plt.title('LASSO Regression Model, Charge Transition Levels (eV)', fontsize=20, pad=12)\n",
+        "\n",
+        "a = [-175,0,125]\n",
+        "b = [-175,0,125]\n",
+        "plt.plot(b, a, c='k', ls='-')\n",
+        "\n",
+        "plt.ylabel('ML Prediction', fontname='Arial Narrow', size=32)\n",
+        "plt.xlabel('DFT Calculation', fontname='Arial Narrow', size=32)\n",
+        "plt.rc('xtick', labelsize=28)\n",
+        "plt.rc('ytick', labelsize=28)\n",
+        "plt.ylim([-1.5, 4.2])\n",
+        "plt.xlim([-1.5, 4.2])\n",
+        "\n",
+        "plt.scatter(Prop_train_fl[:], Pred_train_fl[:], c='blue', marker='*', s=200, edgecolors='dimgrey', alpha=1.0, label='Training')\n",
+        "plt.scatter(Prop_test_fl[:], Pred_test_fl[:], c='orange', marker='*', s=200, edgecolors='dimgrey', alpha=0.2, label='Test')\n",
+        "\n",
+        "te = '%.2f' % rmse_test_prop\n",
+        "tr = '%.2f' % rmse_train_prop\n",
+        "plt.text(2.0, -0.6, 'Test_rmse = ', c='r', fontsize=12)\n",
+        "plt.text(3.3, -0.6, te, c='r', fontsize=12)\n",
+        "plt.text(3.8, -0.6, 'eV', c='r', fontsize=12)\n",
+        "plt.text(1.9, -1.0, 'Train_rmse = ', c='r', fontsize=12)\n",
+        "plt.text(3.3, -1.0, tr, c='r', fontsize=12)\n",
+        "plt.text(3.8, -1.0, 'eV', c='r', fontsize=12)\n",
+        "\n",
+        "plt.xticks([-1, 0, 1, 2, 3, 4])\n",
+        "plt.yticks([-1, 0, 1, 2, 3, 4])\n",
+        "plt.legend(loc='upper left',ncol=1, frameon=True, prop={'family':'Arial narrow','size':16})\n"
       ],
       "execution_count": null,
       "outputs": []
