--- a/Charge_Transition_Levels/Regression.ipynb
+++ b/Charge_Transition_Levels/Regression.ipynb
@@ -361,7 +361,7 @@
         "colab_type": "text"
       },
       "source": [
-        "We will now start training a regression model to predict the property of interest, impurity formation energy. Simple linear regression (ordinary least squares) will be used at first before attempting nonlinear regression techniques."
+        "We will now start training a regression model to predict the property of interest, impurity charge transition level. Simple linear regression (ordinary least squares) will be used at first before attempting nonlinear regression techniques."
       ]
     },
     {
@@ -439,7 +439,7 @@
         "colab_type": "text"
       },
       "source": [
-        "We will now start training the model. We will do this at three different levels of increasing sophistication. The first, and simplest, level ML1 is using the default parameters regression model (eg Random Forest). Next level, ML2, will dig into the model and optimize inernal parameters of the model, hyperparameters, to obtain a better model. The last level, ML3, does hyperparameter optimization and cross-validation. The cross-validation is an important step to avoid or minimize overfitting of the model (think of this as fitting a high-order polynomial to a few data points). At the end, we will do a Grid Search, which is a scheme to march through a grid of hyperparameters, to find the best regression model within this set of hyperparameters.\n"
+        "Next, we will train random forest regression models at three different levels of increasing sophistication. The first, and simplest, level ML1 is using the default parameters regression model. Next level, ML2, will dig into the model and optimize inernal parameters of the model, hyperparameters, to obtain a better model. The last level, ML3, does hyperparameter optimization and cross-validation. The cross-validation is an important step to avoid or minimize overfitting of the model (think of this as fitting a high-order polynomial to a few data points). At the end, we will do a Grid Search, which is a scheme to march through a grid of hyperparameters, to find the best regression model within this set of hyperparameters.\n"
       ]
     },
     {
