--- a/Charge_Transition_Levels/Regression.ipynb
+++ b/Charge_Transition_Levels/Regression.ipynb
@@ -1404,8 +1404,7 @@
         "plt.subplots_adjust(left=0.16, bottom=0.16, right=0.95, top=0.90)\n",
         "plt.rc('font', family='Arial narrow')\n",
         "\n",
-        "plt.title('RFR Model, Charge Transition Levels (eV)', fontsize=20, pad=12)\n",
-        "#plt.title('KRR Model, Charge Transition Levels (eV)', fontsize=20, pad=12)\n",
+        "plt.title('Regression Model, Charge Transition Levels (eV)', fontsize=20, pad=12)\n",
         "\n",
         "a = [-175,0,125]\n",
         "b = [-175,0,125]\n",
