--- a/Formation_Energies/Regression.ipynb
+++ b/Formation_Energies/Regression.ipynb
@@ -907,7 +907,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 482
         },
-        "outputId": "60c6791c-b4e5-4778-c5fc-3b651b2e7f28"
+        "outputId": "8a36b7cb-4a0b-4bc9-c536-a28920bbe5c2"
       },
       "source": [
         "##  Train Kernel Ridge Regression Model  ##\n",
@@ -972,7 +972,7 @@
         "plt.scatter(Prop_test_fl[:], Pred_test_fl[:], c='orange', marker='*', s=200, edgecolors='dimgrey', alpha=1.0, label='Test')\n",
         "plt.legend(loc='upper left',ncol=1, frameon=True, prop={'family':'Arial narrow','size':16})\n"
       ],
-      "execution_count": 62,
+      "execution_count": 72,
       "outputs": [
         {
           "output_type": "stream",
@@ -985,13 +985,13 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<matplotlib.legend.Legend at 0x7efe03f14a90>"
+              "<matplotlib.legend.Legend at 0x7efe03398a90>"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 62
+          "execution_count": 72
         },
         {
           "output_type": "display_data",
@@ -1029,7 +1029,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 536
         },
-        "outputId": "7d27ccc7-d549-4d3d-a9e2-80b994bab689"
+        "outputId": "db509cb6-cc71-49c6-a8af-19262d14aeeb"
       },
       "source": [
         "##  Train LASSO Regression Model  ##\n",
@@ -1092,7 +1092,7 @@
         "plt.scatter(Prop_test_fl[:], Pred_test_fl[:], c='orange', marker='*', s=200, edgecolors='dimgrey', alpha=1.0, label='Test')\n",
         "plt.legend(loc='upper left',ncol=1, frameon=True, prop={'family':'Arial narrow','size':16})\n"
       ],
-      "execution_count": 63,
+      "execution_count": 73,
       "outputs": [
         {
           "output_type": "stream",
@@ -1113,13 +1113,13 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<matplotlib.legend.Legend at 0x7efe0405aa58>"
+              "<matplotlib.legend.Legend at 0x7efe0330aa90>"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 63
+          "execution_count": 73
         },
         {
           "output_type": "display_data",
